--- a/login.html
+++ b/login.html
@@ -9,18 +9,14 @@
 <body>
     <div class="container">
         <div class="login">
-            <form action="">
+            <form onsubmit="validateUser()" return(false)>
                 <h1>LOGIN</h1>
                 <div class="input-log">
-                    <input id="log_email" class="input" type="email" placeholder="Email">
-                    <p id="log_email_error" style="color:red; margin: 0; font-size: small;"></p>
-                    <p id="log_email_verify" style="color:green; margin: 0; font-size: small;"></p>
-                    <input id="log_pass" class="input" type="password" placeholder="Password">
-                    <p id="log_pass_error" style="color:red; margin: 0; font-size: small;"></p>
-                    <p id="log_pass_verify" style="color:green; margin: 0; font-size: small;"></p>
+                    <input id="log_email" class="input" type="email" placeholder="Email" required>
+                    <input id="log_pass" class="input" type="password" placeholder="Password" required>
                 </div>
 
-                <button class="btn" type="submit" onclick="validateUser()">LOGIN</button>
+                <button class="btn" type="submit">LOGIN</button>
 
                 <p>Don't have an account? <a href="register.html">Register</a></p>
             </form>
